Added README for chat-client